Langs: fixed gap in mobile size

--- a/src/components/resume/Langs.css
+++ b/src/components/resume/Langs.css
@@ -220,6 +220,7 @@
         justify-content: center;
         align-items: center;
         margin: auto;
+        row-gap: 10px;
     }
     .langs .container .box {
         /* border: solid red 1px; */
